--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -7,9 +7,9 @@
 actor: AcceptanceTester
 modules:
     enabled:
-        - PhpBrowser:
+        - WebDriver:
             url: http://automationpractice.com/index.php
-            host: 'localhost'
+            host: localhost
             port: 9515
             browser: chrome
             window_size: 1480x820
