--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -8,11 +8,13 @@ actor: AcceptanceTester
 modules:
     enabled:
         - WebDriver:
-            url: http://saucedemo.com/
+            url: https://prostochizh.github.io/form/
             host: localhost
             port: 9515
             browser: chrome
             window_size: 1480x820
 
         - \Helper\Acceptance
+        - \Helper\BaseHelper
+
 step_decorators: ~        
