--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -8,7 +8,7 @@ actor: AcceptanceTester
 modules:
     enabled:
         - WebDriver:
-            url: https://prostochizh.github.io/form/
+            url: https://habr.com/ru/all
             host: localhost
             port: 9515
             browser: chrome
